unpackaged/pre/first/objects/Partnership_Activity_Log__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partnership Activity</description>
        <label>Activity</label>
        <referenceTo>Partnership_Activity__c</referenceTo>
        <relationshipLabel>Partnership Activities Log</relationshipLabel>
        <relationshipName>Partnership_Activities_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Church_School_Partnership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Church School Partnership</label>
        <referenceTo>Church_School_Partnership__c</referenceTo>
        <relationshipLabel>Partnership Activities Log</relationshipLabel>
        <relationshipName>Partnership_Activity_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Elaboration__c</fullName>
        <inlineHelpText>Please elaborate if desired</inlineHelpText>
        <label>Elaboration</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly__c</fullName>
        <description>Number of volunteers who serve once a month</description>
        <inlineHelpText>Number of volunteers who serve once a month</inlineHelpText>
        <label>Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partnership_Update__c</fullName>
        <label>Partnership Update</label>
        <referenceTo>Partnership_Hour__c</referenceTo>
        <relationshipLabel>Partnership Activities Log</relationshipLabel>
        <relationshipName>Partnership_Activities_Log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weekly__c</fullName>
        <description>Number of volunteers who serve once a week</description>
        <inlineHelpText>Number of volunteers who serve once a week</inlineHelpText>
        <label>Weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yearly__c</fullName>
        <description>Number of volunteers who serve once a year</description>
        <inlineHelpText>Number of volunteers who serve once a year</inlineHelpText>
        <label>Yearly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partnership Activity Log</label>
    <nameField>
        <label>Partnership Activity Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partnership Activities Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>